--- a/client/index.pug
+++ b/client/index.pug
@@ -4,6 +4,7 @@ html
         meta(charset = 'utf-8')
         meta(name='viewport', content="initial-scale=1.0, width=device-width")
         title Notes SPA
+        link(href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type='text/css')
 
     body
         #app
