--- a/client/components/App/style.scss
+++ b/client/components/App/style.scss
@@ -17,10 +17,11 @@ body {
 .app {
     max-width: 1200px;
     width: 100%;
-}
-.app__header {
-    text-align: center;
-    font-weight: 500;
-    color: grey;
-    text-shadow: 0 2px 3px rgba(255, 255, 255, 0.5);
+
+    &__header {
+        text-align: center;
+        font-weight: 500;
+        color: grey;
+        text-shadow: 0 2px 3px rgba(255, 255, 255, 0.5);
+    }
 }
