--- a/client/components/NotesGrid/style.scss
+++ b/client/components/NotesGrid/style.scss
@@ -5,6 +5,8 @@
   background-color: yellow;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   border-radius: 3px;
+  padding: 10px;
+  margin-bottom: 10px;
   transition: box-shadow .3s;
   white-space: pre-wrap;
   word-wrap: break-word;
